--- a/DotSpatTopology/packages.config
+++ b/DotSpatTopology/packages.config
@@ -14,6 +14,7 @@
   <package id="DotSpatial.Symbology.Forms" version="1.9" targetFramework="net461" />
   <package id="DotSpatial.Topology" version="1.9" targetFramework="net461" />
   <package id="GeoAPI" version="1.7.4" targetFramework="net461" />
+  <package id="HDF5DotNet.x64" version="1.8.9" targetFramework="net461" />
   <package id="NetTopologySuite" version="1.14" targetFramework="net461" />
   <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="net461" />
 </packages>
